--- a/Resources/cotizacion.html
+++ b/Resources/cotizacion.html
@@ -14,11 +14,11 @@
             <p>
                 RNC: 131-09580-1
                 <br />
-                Direccci&oacute;
-                n: Doctor Defillo #45 Ens. Quisqueya, SD.
+                Direcci&oacute;n:
+                Doctor Defillo #45 Ens. Quisqueya, SD.
                 <br />
-                Tel&eacute;
-                fono: 809-4834624
+                Tel&eacute;fono:
+                809-4834624
                 <br />
                 Cel: 829-384-5759
                 <br />
@@ -93,7 +93,7 @@
     </table>
     
     <table style="border-collapse: collapse; border: 2px solid black;" border="1px">
-        <tr>
+        <tr style="padding: 3px;">
             <th style="padding: 10px;">Itm</th>
             <th>Cod. Prod</th>
             <th>Descripción Producto</th>
@@ -122,17 +122,17 @@
             <table style="border-collapse: collapse; border: 2px solid black;" border="1px">
                 <tr>
                     <td>
-                        Subtotal----->@Subtotal
+                        Subtotal  ----->@Subtotal
                         <br />
                         Dscto. parcial
                         <br />
-                        @DsGlobal % Dscto. Global-----> @Dsctonumero
+                        @DsGlobal % Dscto. Global  -----> @Dsctonumero
                         <br />
                         Miscelaneos
                         <br />
-                        Impto. 18.0 % ----->@imptotal
+                        Impto. @imp %  ----->@IMPTOTAL
                         <br />
-                        <b>TOTAL-----> @TOTAL</b>
+                        <b>TOTAL  -----> @TOTAL</b>
                     </td>
 
                    
