change coti y factura logica

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -104,19 +104,19 @@
             <table border="1px" style="border-collapse: collapse; align = "right">
                 <tr>
                     <th style="padding: 8px; text-align: start;">Valor Bruto</th>
-                    <td style="padding: 8px;">@VALOR_BRUTO</td>
+                    <td style="padding: 8px;">@B</td>
                 </tr>
                 <tr>
-                    <th style="padding: 8px; text-align: start;">Descuento</th>
-                    <td style="padding: 8px;">@DESCUENTO</td>
+                    <th style="padding: 8px; text-align: start;">Descuento @DESCUENTO %</th>
+                    <td style="padding: 8px;">@D</td>
                 </tr>
                 <tr>
-                    <th style="padding: 8px; text-align: start;">Impuesto</th>
-                    <td style="padding: 8px;">@IMPUESTO</td>
+                    <th style="padding: 8px; text-align: start;"> @IMPUESTO % Impuesto</th>
+                    <td style="padding: 8px;">@I</td>
                 </tr>
                 <tr>
                     <th style="padding: 8px; text-align: start;">Valor Neto</th>
-                    <td style="padding: 8px;">@VALOR_NETO</td>
+                    <td style="padding: 8px;">@V</td>
                 </tr>
             </table>
         </div>
