--- a/Resources/index.html
+++ b/Resources/index.html
@@ -59,11 +59,11 @@
             <table border="1px" style="border-collapse: collapse;">
                 <tr>
                     <th style="width: 130px; padding: 8px;">N&uacute;mero</th>
-                    <td >@NUMERO</td>
+                    <td>@NUMERO</td>
                 </tr>
                 <tr>
                     <th style="width: 130px; padding: 8px;">Fecha</th>
-                    <td >@FECHA</td>
+                    <td>@FECHA</td>
                 </tr>
                 <tr>
                     <th style="width: 130px; padding: 8px;">Condiciones</th>
@@ -71,15 +71,15 @@
                 </tr>
                 <tr>
                     <th style="width: 130px; padding: 8px;">Vencimiento</th>
-                    <td >@VENCIMIENTO</td>
+                    <td>@VENCIMIENTO</td>
                 </tr>
                 <tr>
                     <th style="width: 130px; padding: 8px;">Orden</th>
-                    <td >@ORDEN</td>
+                    <td>@ORDEN</td>
                 </tr>
                 <tr>
                     <th style="width: 130px; padding: 8px;">Pagina No.</th>
-                    <td >@PAGINA</td>
+                    <td>@PAGINA</td>
                 </tr>
             </table>
         </div>
@@ -99,28 +99,31 @@
         </table>
         <br />
     </div>
-    
-        <div align ="right">
-            <table border="1px" style="border-collapse: collapse; align = "right">
-                <tr>
-                    <th style="padding: 8px; text-align: start;">Valor Bruto</th>
-                    <td style="padding: 8px;">@B</td>
-                </tr>
-                <tr>
-                    <th style="padding: 8px; text-align: start;">Descuento @DESCUENTO %</th>
-                    <td style="padding: 8px;">@D</td>
-                </tr>
-                <tr>
-                    <th style="padding: 8px; text-align: start;"> @IMPUESTO % Impuesto</th>
-                    <td style="padding: 8px;">@I</td>
-                </tr>
-                <tr>
-                    <th style="padding: 8px; text-align: start;">Valor Neto</th>
-                    <td style="padding: 8px;">@V</td>
-                </tr>
-            </table>
-        </div>
-    
 
+    <div align="right">
+        <table border="1px" style="border-collapse: collapse; align = " right">
+            <tr>
+                <th style="padding: 8px; text-align: start;">Valor Bruto</th>
+                <td style="padding: 8px;">@B</td>
+            </tr>
+            <tr>
+                <th style="padding: 8px; text-align: start;">Descuento @DESCUENTO %</th>
+                <td style="padding: 8px;">@D</td>
+            </tr>
+            <tr>
+                <th style="padding: 8px; text-align: start;"> @IMPUESTO % Impuesto</th>
+                <td style="padding: 8px;">@I</td>
+            </tr>
+            <tr>
+                <th style="padding: 8px; text-align: start;">Valor Neto</th>
+                <td style="padding: 8px;">@V</td>
+            </tr>
+        </table>
+    </div>
+
+    <p style="padding:50px; text-align:left">ENTREGADO POR</p>
+    <br />
+    <br />
+    <p style="padding:50px; text-align:left">RECIBIDO POR</p>
 </body>
 </html>
