--- a/Resources/cotizacion.html
+++ b/Resources/cotizacion.html
@@ -94,7 +94,7 @@
     <br />
     <table style="border-collapse: collapse; border: 2px solid black;" border="1px">
         <tr style="padding: 3px;">
-            <th style="padding: 10px;">Itm</th>
+            <th style="padding: 10px;">Item</th>
             <th>Cod. Prod</th>
             <th>Descripción Producto</th>
             <th>Bodg.</th>
