--- a/Resources/index.html
+++ b/Resources/index.html
@@ -55,7 +55,7 @@
             </table>
         </div>
         <div>
-            <H2>Factura RD$</H2>
+            <H2>Factura</H2>
             <table border="1px" style="border-collapse: collapse;">
                 <tr>
                     <th style="width: 130px; padding: 8px;">N&uacute;mero</th>
